# noisy_ssm

./: .gitignore  .pre-commit-config.yaml  README.md  configs.py  data.py  grad_norms.ipynb  grad_norms.py  gradient_norms.json  pyproject.toml  test.ipynb
data/: gen_listops.py
data/basic_20-70/: test.tsv  train.tsv  val.tsv
data/basic_50-150/: test.tsv  val.tsv
data/basic_500-1000/: test.tsv  val.tsv
mamba_trainer/: data.py  preprocess.py  trainer.py
trainer/: __init__.py  data.py  preprocess.py  trainer.py
