[tool.poetry]
name = "noisy_ssm"
version = "0.1.0"
description = "Heavy-Tailed Noise in SSMs"
authors = ["Andron00e"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "^24.4.2"
pre-commit = "^3.7.1"
isort = "^5.13.2"
peft = "^0.11.1"
huggingface-hub = "^0.24.0"
torch = "^2.3.1"
transformers = "^4.42.4"
datasets = "^2.20.0"
tensorflow = "^2.17.0"

[tool.black]
line-length = 119
required-version = "22.4.2"

[tool.isort]
profile = "black"
line_length = 119
combine_as_imports = true
combine_star = true